--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">xyz</span>
+          <span id="name">Mon Mon!</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
+        <p class="two" id="greetingText">I lobe this name even if you dont hehe</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>It's the day of love</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Valentine's Day! So much love and nfjewbfjew....
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -36,12 +36,12 @@
         <p class="idea-1">That's what I was going to do.</p>
         <p class="idea-2">But then I stopped.</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          I realised, I wanted to do something <strong>Different</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
-          You are Special
-          <span>:)</span>
+          It's You
+          <span>;)</span>
         </p>
         <p class="idea-6">
           <span>S</span>
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy Mon Mon Day!</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Okay, now visit <a href="https://dante-afk.github.io/fourteenth/" target="_blank">this link</a> for a different surprise.</p>
+        <p id="replay">Or click on this text, if you want to watch it again.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
